--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1847,3 +1847,20 @@ form input[type = submit]:hover{
 }
 }
 /* Book an appointment css ends here */
+
+/* button for login */
+.login-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: rgb(237, 136, 153);
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: background-color 0.3s ease-in-out;
+  font-weight: 700;
+}
+
+.login-button:hover {
+  background-color: rgb(237, 102, 125);
+}
