--- a/assets/css/styleAdmin.css
+++ b/assets/css/styleAdmin.css
@@ -7,36 +7,36 @@ body {
     font-family: "Montserrat", sans-serif;
   }
   
-  .material-icons-outlined {
+.material-icons-outlined {
     vertical-align: middle;
     line-height: 1px;
   }
   
-  .text-primary {
+.text-primary {
     color: #666666;
   }
   
-  .text-blue {
+.text-blue {
     color: #246dec;
   }
   
-  .text-red {
+.text-red {
     color: #cc3c43;
   }
   
-  .text-green {
+.text-green {
     color: #367952;
   }
   
-  .text-orange {
+.text-orange {
     color: #f5b74f;
   }
   
-  .font-weight-bold {
+.font-weight-bold {
     font-weight: 600;
   }
   
-  .grid-container {
+.grid-container {
     display: grid;
     grid-template-columns: 260px 1fr 1fr 1fr;
     grid-template-rows: 0.2fr 3fr;
@@ -46,49 +46,10 @@ body {
     height: 100vh;
   }
   
-  .href-button {
-    display: inline-flex;
-    align-items: center;
-    text-decoration: none; 
-    color: rgba(208, 203, 200, 0.645);
-    font-weight: bold; 
-  }
-  
-  .href-button:hover {
-    color: #a4b9d0;
-  }
-  
-  .material-icons-outlined {
-    font-size: 24px;
-    margin-right: 5px;
-  }
 
-  .gobackbtn {
-    position: fixed;
-    bottom: 25px;
-    left: 15px;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border-radius: 5px;
-  }
-  
-  .gobackbtn:hover {
-    background-color: #0056b3;
-  }
-  
-  .fa-right-to-bracket {
-    margin-right: 5px;
-  }
-  
-  
-  
   /* ---------- HEADER ---------- */
   
-  .header {
+.header {
     grid-area: header;
     height: 70px;
     background-color: #ffffff;
@@ -99,14 +60,13 @@ body {
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
   }
   
-  .menu-icon {
+.menu-icon {
     display: none;
   }
   
-  
   /* ---------- SIDEBAR ---------- */
   
-  #sidebar {
+#sidebar {
     grid-area: sidebar;
     height: 100%;
     background-color: #21232d;
@@ -116,35 +76,60 @@ body {
     -webkit-transition: all 0.5s;
   }
   
-  .sidebar-title {
+.sidebar-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 20px 20px 20px;
     margin-bottom: 30px;
+    
   }
+  /* Basic styling for the link button */
+.href-button {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    padding: 10px 10px;
+    color: #007bff;
+    color: #ffffff;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.href-button .material-icons-outlined {
+    font-size: 19px;
+    margin-right: 10px;
+}
+
+.href-button:hover {
+    background-color: #0056b3;
+    color: #ffffff;
+}
+
   
-  .sidebar-title > span {
+.sidebar-title > span {
     display: none;
   }
   
-  .sidebar-brand {
+.sidebar-brand {
     margin-top: 15px;
     font-size: 20px;
     font-weight: 700;
   }
   
-  .sidebar-list {
+.sidebar-list {
     padding: 0;
     margin-top: 15px;
     list-style-type: none;
+    font-weight: 600;
   }
   
-  .sidebar-list-item {
+.sidebar-list-item {
     padding: 20px 20px 20px 20px;
+    font-size: 18px;
   }
   
-  .sidebar-list-item:hover {
+.sidebar-list-item:hover {
     background-color: rgba(255, 255, 255, 0.2);
     cursor: pointer;
   }
@@ -163,29 +148,30 @@ body {
   
   /* ---------- MAIN ---------- */
   
-  .main-container {
+.main-container {
     grid-area: main;
     overflow-y: auto;
     padding: 20px 20px;
   }
   
-  .main-title {
+.main-title {
     display: flex;
     justify-content: space-between;
   }
   
-  .main-title > p {
+.main-title > p {
     font-size: 20px;
   }
   
-  .main-cards {
+  
+.main-cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
     margin: 20px 0;
   }
   
-  .card {
+.card {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -197,85 +183,111 @@ body {
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
   }
   
-  .card:first-child {
+.card:first-child {
     border-left: 7px solid #246dec;
   }
   
-  .card:nth-child(2) {
+.card:nth-child(2) {
     border-left: 7px solid #f5b74f;
   }
   
-  .card:nth-child(3) {
+.card:nth-child(3) {
     border-left: 7px solid #367952;
   }
   
-  .card:nth-child(4) {
+.card:nth-child(4) {
     border-left: 7px solid #cc3c43;
   }
   
-  .card > span {
+.card > span {
     font-size: 20px;
     font-weight: 600;
   }
   
-  .card-inner {
+.card-inner {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
   
-  .card-inner > p {
+.card-inner > p {
     font-size: 18px;
   }
   
-  .card-inner > span {
+.card-inner > span {
     font-size: 35px;
   }
-
-
-  /* *************      **************** */
-                /* CHARTS */ 
-  /* *************      **************** */
-
-  .charts {
+  
+.charts {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-  }
-  
-  .charts-card {
+}
+
+.charts-card {
     background-color: #ffffff;
     margin-bottom: 20px;
     padding: 25px;
     box-sizing: border-box;
-    -webkit-column-break-inside: avoid;
     border: 1px solid #d2d2d3;
     border-radius: 5px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
-  }
-  
-  .chart-title {
+}
+
+.chart-title {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 22px;
-    font-weight: 600;
-  }
+}
 
-  #chart {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 73px;
-    min-height: max-content;
-    min-width:max-content;
-  } 
-  /* ****************** MEDIA QUERIES ***************** */
+  /* ---------- SCROLLBARS ---------- */
+  
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 6px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #a5aaad;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #4f35a1;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a5aaad;
+  }
+  /* Style for the Go Back button container */
+.gobackbtn {
+    position: fixed;
+    bottom: 30px;
+    left: 28px; 
+}
+
+.gobackbtn i {
+    display: inline-block;
+    font-size: 30px;
+    transform: rotate(180deg);
+    color: #30a2ff; 
+}
+
+
+.gobackbtn:hover i {
+    color: rgb(249, 1, 1); 
+}
   
   
-  /* Medium <= 992px */
+  /* ---------- MEDIA QUERIES ---------- */
+  
   @media screen and (max-width: 992px) {
-    .grid-container {
+.main-cards {
+      grid-template-columns: 1fr;
+    }
+.grid-container {
       grid-template-columns: 1fr;
       grid-template-rows: 0.2fr 3fr;
       grid-template-areas:
@@ -283,42 +295,68 @@ body {
         "main";
     }
   
-    #sidebar {
+#sidebar {
       display: none;
     }
   
-    .menu-icon {
+.menu-icon {
       display: inline;
     }
   
-    .sidebar-title > span {
+.sidebar-title > span {
       display: inline;
     }
-    .charts {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-    
-      .charts-card {
-        width: 100%;
-        margin: 0 auto 15px;
-      }
-  }
   
-  @media screen and (max-width: 768px) {
-    .main-cards {
-      grid-template-columns: 1fr;
-      gap: 10px;
-      margin-bottom: 0;
-    }
-
-  }
-  
-  @media screen and (max-width: 576px) {
-    .header-left {
-      display: none;
+.charts {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
     }
   
-    
+.charts-card {
+      padding: 20px;
+    }
+  
+.chart-title {
+      font-size: 18px;
+    }
+  
+@media screen and (max-width: 800px) {
+.main-cards {
+        grid-template-columns: 1fr;
+      }
+.charts {
+        grid-template-columns: 1fr;
+      }
+    }
+  
+@media screen and (max-width: 576px) {
+.header-left {
+        display: none;
+      }
+.main-cards {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-bottom: 20px;
+      }
+.charts {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-bottom: 0;
+      }
+    }
+  
+@media screen and (max-width: 300px) {
+.main-cards {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-bottom: 0;
+      }
+.charts {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-bottom: 0;
+      }
+    }
   }
+  
