--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,11 @@
   box-sizing: border-box;
 }
 .style-for-logo {
-  font-size: 30px;
+  font-size: 40px;
   font-family: 'Open Sans', sans-serif;
   display: flex;
+  padding: 20px;
+  font-weight: 1000px;
 }
 a {
   text-decoration: none;
@@ -27,6 +29,14 @@ li {
   /* background: linear-gradient(rgb(220, 93, 163),rgb(176, 69, 194)); */
   color: black;
   z-index: 1;
+}
+.navbar img {
+  width: 50px;
+  margin-right: 10px;
+}
+.style-for-logo img {
+  width: 50px;
+  margin-right: 10px;
 }
 .navbar2 {
   height: 100px;
@@ -114,8 +124,8 @@ body {
 }
 .header {
   height: calc(100vh - 100px);
-  background-image: url(../images/Header-banner.png);
   position: center;
+  background-image: url(../images/Header-banner.png);
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -152,21 +162,21 @@ body {
   border: 1px solid;
   border-radius: 5px;
   font-size: 25px;
-  background-color:white;
+  background-color:pink;
   margin-right: 10px;
 }
 .book-an-appointment-btn:hover {
   color: black;
   border-radius: 5px;
-  background-color:pink;
+  background-color: rgb(236, 175, 185);
 }
 .checkout-promos-btn{
-  color: white;
+  color: black;
   padding: 20px;
   border: 2px solid gray;
   border-radius: 5px;
   font-size: 25px;
-  background: pink;
+  background: transparent;
 }
 .checkout-promos-btn:hover {
   color: black;
@@ -541,7 +551,7 @@ body {
 }
 @media (max-width: 767px) {
   .Ourstaff {
-    height: calc(100vh - 220px);
+    height: calc(50vh - 220px);
   }
   .ourStaff-span{
     font-size: 30px;
@@ -616,10 +626,33 @@ footer {
   border: 5px solid gray;
 }
 .copyright {
-  color: white;
   display: flex;
   justify-content: center;
   padding: 20px 20px;
+}
+.colaborators {
+  display: flex;
+  justify-content: center;
+}
+.colaborator {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  background-color: rgb(233, 174, 184);
+  padding: 20px;
+}
+.colaborator img {
+  width: 200px;
+  height: 200px;
+  border-radius: 10px;
+  border: 1px solid gray;
+  margin: 10px;
 }
 @media (max-width: 767px) {
   footer {
@@ -639,6 +672,32 @@ footer {
     display: flex;
     justify-content: center;
     width: 100%;
+  }
+  .colaborator {
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    background-color: rgb(233, 174, 184);
+    padding: 2px;
+    margin-bottom: 20px;
+  }
+  .colaborator img {
+    width: 70px;
+    height: 70px;
+    border-radius: 10px;
+    border: 1px solid gray;
+    margin: 10px;
+  }
+  .copyright {
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 0px;
   }
 }
 
@@ -1725,6 +1784,7 @@ body{
   align-items: center;
   color: #fff;
   padding-bottom: 20px;
+  height: calc(100vh - 100px);
 }
 .card-container{
   display: grid;
@@ -1756,6 +1816,9 @@ body{
 }
 form {
   background-color: pink;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 .form-row{
   display: flex;
@@ -1765,7 +1828,7 @@ form {
 }
 form select, form input{
   display: block;
-  width: 90%;
+  width: 100%;
   margin: 15px 10px;
   padding: 5px;
   font-size: 15px;
@@ -1821,21 +1884,19 @@ form input[type = submit]:hover{
 }
 
 @media screen and (max-width: 768px) {
-    .card-container {
-        grid-template-columns: 100%;
-        width: 100vw;
-    }
-    
-    .card-img {
-        height: 330px;
-    }
-    
-    .appointment-item strong {
-        width: 100%;
-    }
-    .banner h2{
-     font-size: 25px;
-}
+  .card-container {
+    grid-template-columns: 100%;
+    width: 100vw;
+  }
+  .card-img {
+    height: 330px;
+  }
+  .appointment-item strong {
+    width: 100%;
+  }
+  .banner h2{
+    font-size: 25px;
+ }
 }
 /* Book an appointment css ends here */
 
@@ -1864,27 +1925,34 @@ form input[type = submit]:hover{
   justify-content: center;
   margin: 20px;
 }
-.sign-up-form {
+.sign-up-form h2{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 10px;
 }
 #signupForm {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 50%;
+  width: 100%;
 
 }
 .containerForSignUpForm {
+  margin: 15px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: rgb(250, 179, 191);
+  box-shadow: 1px 1px 1px 2px gray;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: calc(100vh - 100px);
 }
 .form input {
-  width: 50%;
-  margin: 0 auto; /* Center-align the input fields horizontally */
+  width: 100%;
+  margin: 10px auto; /* Center-align the input fields horizontally */
   display: flex;
   align-items: flex-start;
   padding: 13px;
@@ -1906,18 +1974,18 @@ form input[type = submit]:hover{
 .form .bday,
 .form .age,
 .form .gender {
-  width: 30%;
+  width: 50%;
 }
 .gender {
   display: flex;
-  justify-content: evenly;
+  justify-content: space-evenly;
 }
 .form .dob {
   display: flex;
   justify-content: space-between;
 }
 .form input {
-  width: 90%;
+  width: 100%;
   margin: 0 auto; /* Center-align the input fields horizontally */
   display: flex;
   align-items: flex-start;
@@ -1930,18 +1998,28 @@ form input[type = submit]:hover{
   display: flex;
   align-items: center;
 }
-
+.radio-option label {
+  margin-bottom: 15px;
+  margin-right: 15px;
+}
+.bday {
+  display: flex;
+  margin-left: 10px;
+}
+.bday label {
+  margin-top: 15px;
+}
 .radio-option input[type="radio"] {
   margin-right: 5px;
 }
 .address {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 3px;
+  align-items: center;
 }
 .address > div {
   flex: 1;
-  margin-right: 10px;
+  margin: 10px;
 }
 .address input[type="text"] {
   width: 100%;
@@ -1956,7 +2034,7 @@ form input[type = submit]:hover{
 }
 .account > div {
   flex: 1;
-  margin-right: 10px;
+  margin: 10px;
 }
 .account input[type="email"],
 .account input[type="text"] {
@@ -1973,8 +2051,7 @@ form input[type = submit]:hover{
 }
 .password > div {
   flex: 1;
-  margin-right: 10px;
-  margin-bottom: 10px;
+ margin: 10px;
 }
 .password input[type="password"] {
   width: 100%;
@@ -2058,21 +2135,391 @@ form input[type = submit]:hover{
 
 
 /* Log In starts here */
+.containerforlogin {
+  margin: 15px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: rgb(250, 179, 191);
+  box-shadow: 1px 1px 1px 2px gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .login-form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  height: 80vh;
+  justify-content: center;
+  margin: 20px;
+  height: calc(100vh - 100px);
+  background-color:  pink;
+  width: 50%;
 }
 #loginForm {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
+  width: 100%;
 }
 .login-image {
   width: 20%;
 }
+@media screen and (max-width: 767px) {
+  #signupForm {
+    width: 100%;
+  }
+}
 /* Log In ends here */
+/* Dashboard starts here */
+.bodyfordashboard {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #e6e8ed;
+  color: #666666;
+  font-family: "Montserrat", sans-serif;
+}
+.material-icons-outlined {
+  vertical-align: middle;
+  line-height: 1px;
+}
+.text-primary {
+  color: #666666;
+}
+  
+.text-blue {
+    color: #246dec;
+  }
+  
+.text-red {
+    color: #cc3c43;
+  }
+  
+.text-green {
+    color: #367952;
+  }
+  
+.text-orange {
+    color: #f5b74f;
+  }
+  
+.font-weight-bold {
+    font-weight: 600;
+  }
+  
+.grid-container {
+  display: grid;
+  grid-template-columns: 260px 1fr 1fr 1fr;
+  grid-template-rows: 0.2fr 3fr;
+    grid-template-areas:
+    "sidebar header header header"
+    "sidebar main main main";
+  height: 100vh;
+}
+  
+
+  /* ---------- HEADER ---------- */
+  
+.headerForDashboard {
+    grid-area: header;
+    height: 70px;
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 30px 0 30px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+  }
+  
+.menu-icon {
+    display: none;
+  }
+  
+  /* ---------- SIDEBAR ---------- */
+#sidebar {
+  grid-area: sidebar;
+  height: 100%;
+  background-color: #21232d;
+  color: #9799ab;
+  overflow-y: auto;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;    
+}
+  
+.sidebar-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 20px 20px 20px;
+    margin-bottom: 30px;
+    
+  }
+  /* Basic styling for the link button */
+.href-button {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 10px 10px;
+  color: #007bff;
+  color: #ffffff;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.href-button .material-icons-outlined {
+  font-size: 19px;
+  margin-right: 10px;
+}
+
+.href-button:hover {
+  background-color: pink;
+  color: black;
+}
+
+  
+.sidebar-title > span {
+  display: none;
+}
+  
+.sidebar-brand {
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: 700;
+}
+  
+.sidebar-list {
+  padding: 0;
+  margin-top: 15px;
+  list-style-type: none;
+  font-weight: 600;
+ }
+  
+.sidebar-list-item {
+  padding: 20px 20px 20px 20px;
+  font-size: 18px;
+}
+  
+.sidebar-list-item:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+}
+.sidebar-list-item > a {
+  text-decoration: none;
+  color: #9799ab;
+} 
+.sidebar-responsive {
+  display: inline !important;
+  position: absolute;
+  z-index: 12 !important;
+}
+  
+  
+  /* ---------- MAIN ---------- */
+  
+.main-container {
+    grid-area: main;
+    overflow-y: auto;
+    padding: 20px 20px;
+  }
+  
+.main-title {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+.main-title > p {
+    font-size: 20px;
+  }
+  
+  
+.main-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    margin: 20px 0;
+  }
+  
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 25px;
+    background-color: #ffffff;
+    box-sizing: border-box;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+  }
+  
+.card:first-child {
+    border-left: 7px solid #246dec;
+  }
+  
+.card:nth-child(2) {
+    border-left: 7px solid #f5b74f;
+  }
+  
+.card:nth-child(3) {
+    border-left: 7px solid #367952;
+  }
+  
+.card:nth-child(4) {
+    border-left: 7px solid #cc3c43;
+  }
+  
+.card > span {
+    font-size: 20px;
+    font-weight: 600;
+  }
+  
+.card-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+.card-inner > p {
+    font-size: 18px;
+  }
+  
+.card-inner > span {
+    font-size: 35px;
+  }
+  
+.charts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.charts-card {
+    background-color: #ffffff;
+    margin-bottom: 20px;
+    padding: 25px;
+    box-sizing: border-box;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+}
+
+.chart-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+}
+
+  /* ---------- SCROLLBARS ---------- */
+  
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 6px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #a5aaad;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #4f35a1;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a5aaad;
+  }
+  /* Style for the Go Back button container */
+.gobackbtn {
+    position: fixed;
+    bottom: 30px;
+    left: 28px; 
+}
+
+.gobackbtn i {
+    display: inline-block;
+    font-size: 30px;
+  transform: rotate(180deg);
+  color: pink; 
+}
+
+
+.gobackbtn:hover i {
+  color: rgb(249, 1, 1); 
+}
+@media screen and (max-width: 992px) {
+.main-cards {
+      grid-template-columns: 1fr;
+    }
+.grid-container {
+      grid-template-columns: 1fr;
+      grid-template-rows: 0.2fr 3fr;
+      grid-template-areas:
+        "header"
+        "main";
+    }
+  
+#sidebar {
+      display: none;
+    }
+  
+.menu-icon {
+      display: inline;
+    }
+  
+.sidebar-title > span {
+      display: inline;
+    }
+  
+.charts {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+    }
+  
+.charts-card {
+      padding: 20px;
+    }
+  
+.chart-title {
+      font-size: 18px;
+    }
+  
+@media screen and (max-width: 800px) {
+.main-cards {
+        grid-template-columns: 1fr;
+      }
+.charts {
+        grid-template-columns: 1fr;
+      }
+    }
+  
+@media screen and (max-width: 576px) {
+.header-left {
+        display: none;
+      }
+.main-cards {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-bottom: 20px;
+      }
+.charts {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-bottom: 0;
+      }
+    }
+  
+@media screen and (max-width: 300px) {
+.main-cards {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-bottom: 0;
+      }
+.charts {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-bottom: 0;
+      }
+    }
+  }
+  
