--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1232,11 +1232,9 @@ button{
   padding: 0 1.5rem;
 }
 /* end of resets and reusable stylings  */
-
-
 .navbar-for-product-addtocart{
   position: fixed;
-  top: 0;
+  top: 100px;
   left: 50%;
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
@@ -1247,7 +1245,7 @@ button{
   padding: 1.5rem 1rem!important;
   align-items: center;
   padding: 1.5rem 0;
-  background: var(--ghost-white);
+  background: transparent;
   z-index: 1;
 }
 .cart-btns {
@@ -1259,6 +1257,12 @@ button{
 .cart-btns a {
   color: pink;
   font-size: 30px;
+}
+.btn-buy {
+  border: 1px solid gray;
+  margin: 20px;
+  font-size: 25px;
+  background-color: rgb(253, 135, 155);
 }
 #cart-btn{
   border: none;
@@ -1289,6 +1293,7 @@ button{
   position: absolute;
   overflow-y: scroll;
   background: #fff;
+  border: 1px solid black;
   width: 100%;
   height: 600px;
   top: 100%;
@@ -1445,6 +1450,13 @@ button{
   font-size: 1.15rem;
   font-weight: 500;
   opacity: 0.6;
+}
+.containerForProductsAddtoCart h2 {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  font-size: 40px;
+  color: pink;
 }
 
 /* Media Queries for responsiveness */
