--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
   font-family: 'Open Sans', sans-serif;
   display: flex;
   padding: 20px;
-  font-weight: 1000px;
+  font-weight: bold;
 }
 a {
   text-decoration: none;
@@ -37,6 +37,8 @@ li {
 .style-for-logo img {
   width: 50px;
   margin-right: 10px;
+  border-radius: 5px;
+  margin-bottom: ;
 }
 .navbar2 {
   height: 100px;
@@ -268,38 +270,61 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 50px;
 }
 .people {
   max-width: 100%;
+  height: 400px;
   margin-top: 20px;
-  border: 1px solid gray;
-  background-color: pink;
+  border: 1px solid pink;
   border-radius: 10px;
-  box-shadow: 3px 3px 4px 1px black;
+  box-shadow: 1px 1px 4px 1px black;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
   margin-right: 20px;
   margin-left: 20px;
+  padding: 10px 40px;
 }
 .people .photo {
   margin: 20px;
-  width: 150px;
-  height: 180px;
+  width: 100px;
+  height: 100px;
   border: 1px solid gray;
   border-radius: 100%;
 }
 .photo1 {
-  background-image: url(../images/evens.jpg);
+  background-image: url(../images/shanny.jpg);
   background-size: cover;
 }
 .photo2 {
   background-image: url(../images/evens.jpg);
   background-size: cover;
 }
+.photo3 {
+  background-image: url(../images/melissa.jpg);
+  background-size: cover;
+}
+.photo4 {
+  background-image: url(../images/alexa.jpg);
+  background-size: cover;
+}
+.photo5 {
+  background-image: url(../images/cassy.jpg);
+  background-size: cover;
+}
+
 .people span {
-  font-size: 30px;
+  font-size: 20px;
+}
+.people i {
+  color: gold;
+}
+.people p {
+  margin: 10px;
+  width: 200px;
+  text-align: start;
 }
 .about-us-btns {
   display: flex;
@@ -434,17 +459,14 @@ body {
     font-size: 15px;
   }
   .people-section {
-    margin: 50px;
-    max-width: 40%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    margin-top: 400px;
   }
   .people {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin: 0px 10px;
   }
   .people .photo {
     display: flex;
@@ -452,7 +474,6 @@ body {
     width: 100px;
     height: 100px;
     border-radius: 100%;
-    background-color: yellow;
   }
   .people span {
     font-size: 20px;
@@ -574,6 +595,16 @@ body {
 }
 
 
+/* revies starts here */
+.reviews {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  font-size: 40px;
+  font-family: 'Open Sans', sans-serif;
+}
+/* revies ends here */
 
 /* footer starts here */
 footer {
@@ -633,6 +664,7 @@ footer {
 .colaborators {
   display: flex;
   justify-content: center;
+  margin-top: 30px;
 }
 .colaborator {
   margin: 20px;
@@ -641,11 +673,15 @@ footer {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 10px;
   border: 1px solid gray;
   border-radius: 10px;
   background-color: rgb(233, 174, 184);
   padding: 20px;
+}
+.colaborator span {
+  font-size: 20px;
+  font-weight: 600;
 }
 .colaborator img {
   width: 200px;
@@ -673,6 +709,10 @@ footer {
     justify-content: center;
     width: 100%;
   }
+  .colaborators {
+    display: flex;
+    flex-wrap: wrap;
+  }
   .colaborator {
     margin: 5px;
     display: flex;
@@ -691,6 +731,10 @@ footer {
     border-radius: 10px;
     border: 1px solid gray;
     margin: 10px;
+  }
+  .colaborator span {
+    font-size: 18px;
+    font-weight: 500;
   }
   .copyright {
     font-size: 10px;
@@ -1867,7 +1911,6 @@ form input[type = submit]:hover{
   font-size: 30px;
   color: pink;
   padding: 10px;
-  box-shadow: 1px 1px 1px 1px gray;
 }
 /* Style for the appointment list container */
 #appointmentList {
@@ -2177,6 +2220,9 @@ form input[type = submit]:hover{
 }
 @media screen and (max-width: 767px) {
   #signupForm {
+    width: 100%;
+  }
+  .login-form {
     width: 100%;
   }
 }
