--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,7 +461,6 @@ body {
   .people-section {
     display: flex;
     flex-direction: column;
-    margin-top: 400px;
   }
   .people {
     display: flex;
@@ -592,6 +591,7 @@ body {
     width: 50%;
     font-size: 15px;
   }
+
 }
 
 
@@ -600,9 +600,18 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
   font-size: 40px;
   font-family: 'Open Sans', sans-serif;
+}
+@media (max-width: 767px) {
+  .reviews {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 300px;
+  }
 }
 /* revies ends here */
 
@@ -712,6 +721,7 @@ footer {
   .colaborators {
     display: flex;
     flex-wrap: wrap;
+    margin: 10px;
   }
   .colaborator {
     margin: 5px;
